# python-trainee-assignment

./: pyproject.toml
tests/: test_matrix.py
traverse_matrix/: matrix.py
